# apps/server/internal/db/models.go
@@ -276,18 +276,19 @@ type Theme struct {
 }
 
 type ThemeCharacter struct {
-	ID                uuid.UUID   `json:"id"`
-	ThemeID           uuid.UUID   `json:"theme_id"`
-	Name              string      `json:"name"`
-	Description       pgtype.Text `json:"description"`
-	ImageUrl          pgtype.Text `json:"image_url"`
-	IsCulprit         bool        `json:"is_culprit"`
-	SortOrder         int32       `json:"sort_order"`
-	MysteryRole       string      `json:"mystery_role"`
-	IsPlayable        bool        `json:"is_playable"`
-	ShowInIntro       bool        `json:"show_in_intro"`
-	CanSpeakInReading bool        `json:"can_speak_in_reading"`
-	IsVotingCandidate bool        `json:"is_voting_candidate"`
+	ID                uuid.UUID       `json:"id"`
+	ThemeID           uuid.UUID       `json:"theme_id"`
+	Name              string          `json:"name"`
+	Description       pgtype.Text     `json:"description"`
+	ImageUrl          pgtype.Text     `json:"image_url"`
+	IsCulprit         bool            `json:"is_culprit"`
+	SortOrder         int32           `json:"sort_order"`
+	MysteryRole       string          `json:"mystery_role"`
+	IsPlayable        bool            `json:"is_playable"`
+	ShowInIntro       bool            `json:"show_in_intro"`
+	CanSpeakInReading bool            `json:"can_speak_in_reading"`
+	IsVotingCandidate bool            `json:"is_voting_candidate"`
+	AliasRules        json.RawMessage `json:"alias_rules"`
 }
 
 type ThemeClue struct {
